--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://iGingko.github.io
+url: http://iGingko.me
 title: Connor's Blog
 subtitle: Tecnology And Humanity.
 author: Connor
