--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ simple_search: https://www.google.com/search
 # You can customize the format as defined in
 # http://www.ruby-doc.org/core-1.9.2/Time.html#method-i-strftime
 # Additionally, %o will give you the ordinal representation of the day
-date_format: "%F %a"
+date_format: "%F, %a"
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
 subscribe_rss: /atom.xml
@@ -70,13 +70,13 @@ github_skip_forks: true
 
 
 # Google +1
-google_plus_one: false
+google_plus_one: true
 google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user:
-googleplus_hidden: true
+googleplus_user: 106727423024678549919
+googleplus_hidden: false
 
 # Pinboard
 pinboard_user:
@@ -96,9 +96,18 @@ google_analytics_tracking_id:
 # Facebook Like
 facebook_like: true
 
+
+# Twitter
+twitter_user: iGingko
+twitter_tweet_button: true
+
+
+#Sina Weibo
 weibo_user: 1307895851
-dribble_user: iGingko
 weibo_share: true
+
+#Dribble
+dribbble_user: iGingko
 
 # comment and share
 comment_and_share: true
