--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ subtitle: Talk is cheap, Show me the code!.
 author: Connor
 simple_search: https://www.google.com/search
 lsi: true
+Source: source
+Destination: public
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
